<resources>
    <string name="app_name">Motive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.user@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Налаштування</string>

    <string name="menu_home">Головна</string>
    <string name="menu_progress">Досягнення</string>
    <string name="menu_video">Відео</string>
    <string name="menu_settings">Налаштування</string>
    <string name="menu_help">Допомога</string>
    <string name="menu_feedback">Зворотній зв\'язок</string>
    <string name="menu_quit">Вихід</string>

    <string name="home_second">Home Second</string>
    <string name="menu_graph">Графік</string>
    <string name="menu_notify">Повідомлення</string>


</resources>
