<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/video"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/video"
            android:title="@string/menu_graph" />

        <menu >
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_notify"
                android:icon="@drawable/ic_access_time_grey600_24dp"
                android:title="@string/menu_notify" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/menu_feedback" />

            <item
                android:id="@+id/nav_quit"
                android:icon="@drawable/quit"
                android:onClick="onClickMenu"
                android:title="@string/menu_quit" />
        </menu>

    </group>
</menu>