<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fo4ik.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.fo4ik.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.fo4ik.myapplication.ui.progress.ProgressFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/progress" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.fo4ik.myapplication.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/video" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.fo4ik.myapplication.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/graph" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.fo4ik.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.fo4ik.myapplication.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/help" />

    <fragment
        android:id="@+id/nav_notify"
        android:name="com.fo4ik.myapplication.ui.notify.NotifyFragment"
        android:label="@string/menu_notify"
        tools:layout="@layout/notify" />


    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.fo4ik.myapplication.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/feedback" />
</navigation>